# count_people

./: .gitignore  .pre-commit-config.yaml  README.md  experiment.ipynb  mypy.ini  pyproject.toml
.github/: pre-commit.yaml  pytest.yaml
.github/workflows/: pre-commit.yaml  pytest.yaml
.github/workflows/vars/: default-job-properties.template.yaml  git-properties.template.yaml
object_detection_api/: main.py
object_detection_api/static/: index.css  index.html  index.js
tests/: test_main.py
