[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 110
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .conda-env
)/
'''

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.paths]
source = ["src/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
branch = false
source = ["src/*"]

[tool.coverage.xml]
directory = "junit"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110
profile = "black"
skip_glob = []

[tool.poetry]
name = "count-people"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
ultralytics = "^8.2.92"
torch = "^2.4.1"
fastapi = "^0.114.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-multipart = "^0.0.9"
pydantic = "1.10.2"
numpy = "^1.9.0"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
jupyter = "^1.1.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"
